ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/ios/protocol_c.framework/Headers/ido_protocol_public_interface.h

//回调处理函数,解析固件回复结果打包成json上报app
typedef void (*protocol_json_cb_handle)(char *json_str, VBUS_EVT_TYPE type, uint32_t error_code);
//回调处理函数,c库通知app事件
typedef void (*protocol_notice_cb_handle)(VBUS_EVT_BASE evt_base,VBUS_EVT_TYPE evt_type,uint32_t error,uint32_t val);
//回调处理函数,传输文件完成回调
typedef void (*data_tran_complete_cb_handle)(uint32_t error,uint32_t error_vale);
//回调处理函数,传输文件进度回调
typedef void (*data_tran_progress_cb_handle)(uint8_t rate);
//回调处理函数,获取flash日志完成回调
//@param error_code 0:成功,8:断线异常,13:超时异常
typedef void (*protocol_flash_log_tran_complete_cb_handle)(uint32_t error_code);
//回调处理函数,获取电池日志信息完成回调
typedef void (*protocol_get_battery_log_info_complete_cb_handle)(char *json_str, uint32_t error_code);
//回调处理函数,获取过热日志信息完成回调
typedef void (*protocol_get_heat_log_info_complete_cb_handle)(char *json_str, uint32_t error_code);
//回调处理函数,上报进度
typedef void (*protocol_report_progress_cb_handle)(uint8_t progress);
//回调处理函数,上报完成
typedef void (*protocol_report_complete_cb_handle)(uint32_t error_vale);
/**
 * @brief v2发送信息提醒以及信息内容(部分设备实现)
 * @param type 信息类型
 * {
 * TYPE_SMS = 0x01
 * TYPE_EMAIL = 0x02
 * TYPE_WX = 0x03
 * TYPE_QQ = 0x04
 * TYPE_WEIBO = 0x05
 * TYPE_FACEBOOK = 0x06
 * TYPE_TWITTER = 0x07
 * TYPE_WHATSAPP = 0x08
 * TYPE_MESSENGER = 0x09
 * TYPE_INSTAGRAM = 0x0A
 * TYPE_LINKEDIN = 0x0B
 * TYPE_CALENDAR = 0x0C
 * TYPE_SKYPE = 0x0D
 * TYPE_ALARM = 0x0E
 * TYPE_VKONTAKTE = 0x10
 * TYPE_LINE = 0x11
 * TYPE_VIBER = 0x12
 * TYPE_KAKAO_TALK = 0x13
 * TYPE_GMAIL = 0x14
 * TYPE_OUTLOOK = 0x15
 * TYPE_SNAPCHAT = 0x16
 * TYPE_TELEGRAM = 0x17
 * TYPE_CHATWORK = 0x20
 * TYPE_SLACK = 0x21
 * TYPE_TUMBLR = 0x23
 * TYPE_YOUTUBE = 0x24
 * TYPE_PINTEREST_YAHOO = 0x25
 * TYPE_TIKTOK = 0x26
 * TYPE_REDBUS = 0X27
 * TYPE_DAILYHUNT= 0X28
 * TYPE_HOTSTAR = 0X29
 * TYPE_INSHORTS = 0X2A
 * TYPE_PAYTM = 0X2B
 * TYPE_AMAZON = 0X2C
 * TYPE_FLIPKART = 0X2D
 * TYPE_PRIME = 0X2E
 * TYPE_NETFLIX = 0X2F
 * TYPE_GPAY = 0X30
 * TYPE_PHONPE = 0X31
 * TYPE_SWIGGY = 0X32
 * TYPE_ZOMATO = 0X33
 * TYPE_MAKEMYTRIP = 0X34
 * TYPE_JIOTV = 0X35
 * TYPE_KEEP = 0X36
 * }
 * @param contactText 通知内容
 * @param phoneNumber 号码
 * @return:SUCCESS(0)成功
 * */
extern int ProtocolV2SetNoticeEvt(int type, char *contactText, char *phoneNumber, char *dataText);
/**
 * @brief v2发送来电提醒状态为来电已接, 告诉设备停止提醒用户(部分设备实现)
 * @return SUCCESS(0)成功
 * */
extern int ProtocolV2StopCallEvt(void);
/**
 * @brief v2发送来电提醒状态为来电已拒, 告诉设备停止提醒用户(部分设备实现)
 * @return SUCCESS(0)成功
 * */
extern int ProtocolV2MissedCallEvt(void);
/******************************** 日志接口 ********************************/

/**
 * @brief 获取flash日志开始
 * @param type 日志类型
 * {PROTOCOL_FLASH_LOG_TYPE_GENERAL   =  0,    //通用log
 * PROTOCOL_FLASH_LOG_TYPE_RESET             =  1,    //复位log
 * PROTOCOL_FLASH_LOG_TYPE_ALGORITHM   =   2,    //算法
 * PROTOCOL_FLASH_LOG_TYPE_HARDWARE    =   3,    //硬件
 * PROTOCOL_FLASH_LOG_TYPE_REBOOT         =   4,    //重启log}
 * @param file_name 文件路径 包括文件名及后缀
 * @return int SUCCESS(0)成功  ERROR_BUSY(17)日志正在获取
 * */
extern int ProtocolGetFlashLogStart(int type, const char *file_name);
/**
 * @brief 设置flash获取时间，单位秒，默认一分钟
 * @return int SUCCESS(0)成功
 * */
extern int ProtocolGetFlashLogSetTime(int time);
/**
 * @brief 获取flash日志停止
 * @return int SUCCESS(0)成功
 * */
extern int ProtocolGetFlashLogStop(void);
/**
 * @brief 获取电池日志信息
 * @return int SUCCESS(0)成功
 * */
extern int ProtocolGetBatteryLogInfo(void);
/**
 * @brief 获取过热日志信息
 * @return int SUCCESS(0)成功
 * */
extern int ProtocolGetHeatLogInfo(void);
/**
 * @brief:获取flashlog进度回调注册
 * @param func 函数指针
 * @return:SUCCESS(0)成功
 * */
extern uint32_t FlashLogTranProgressCallbackReg(protocol_report_progress_cb_handle func);
/**
 * @brief 获取flashlog完成回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t FlashLogTranCompletCallbackReg(protocol_flash_log_tran_complete_cb_handle func);
/**
 * @brief 获取电池日志完成回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t BatteryLogGetCompletCallbackReg(protocol_get_battery_log_info_complete_cb_handle func);
/**
 * @brief 获取过热日志完成回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t HeatLogGetCompletCallbackReg(protocol_get_heat_log_info_complete_cb_handle func);
/******************************** 注册函数接口 ********************************/
/**
 * @brief 解析完固件返回的二进制数据,打包成json数据回调给SDK
 * @return SUCCESS(0),成功
 * */
extern uint32_t JsonDataCallbackDataReg(protocol_json_cb_handle func);
/**
 * @brief 解析完固件返回的v3同步健康数据二进制数据,打包成json数据回调给SDK
 * @return SUCCESS(0),成功
 * */
extern uint32_t V3SyncHealthJsonDataCbReg(protocol_json_cb_handle func);
/**
 * @brief c库通知app事件回调注册
 * @return SUCCESS(0),成功
 * */
extern uint32_t ProtocolNoticeCallbackReg(protocol_notice_cb_handle func);
/**
 * @brief 文件传输完成事件回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t DataTranCompleteCallbackReg(data_tran_complete_cb_handle func);
/**
 * @brief 文件传输进度事件回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t DataTranProgressCallbackReg(data_tran_progress_cb_handle func);
/**
 * @brief:SPP文件传输完成事件回调注册
 * @param func 函数指针
 * @return:SUCCESS(0)成功
 * */
extern uint32_t SppDataTranCompleteCallbackReg(data_tran_complete_cb_handle func);
/**
 * @brief:SPP文件传输进度事件回调注册
 * @param func 函数指针
 * @return:SUCCESS(0)成功
 * */
extern uint32_t SppDataTranProgressCallbackReg(data_tran_progress_cb_handle func);
/**
 * @brief:设备传输文件到APP的传输完成事件回调注册
 * @param func 函数指针
 * @return:SUCCESS(0)成功
 * */
extern uint32_t Device2AppDataTranCompleteCallbackReg(protocol_report_complete_cb_handle func);