ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/lib/src/ffi/ido_protocol_ffi.g.dart


  /// @brief v2发送信息提醒以及信息内容(部分设备实现)
  /// @param type 信息类型
  /// {
  /// TYPE_SMS = 0x01
  /// TYPE_EMAIL = 0x02
  /// TYPE_WX = 0x03
  /// TYPE_QQ = 0x04
  /// TYPE_WEIBO = 0x05
  /// TYPE_FACEBOOK = 0x06
  /// TYPE_TWITTER = 0x07
  /// TYPE_WHATSAPP = 0x08
  /// TYPE_MESSENGER = 0x09
  /// TYPE_INSTAGRAM = 0x0A
  /// TYPE_LINKEDIN = 0x0B
  /// TYPE_CALENDAR = 0x0C
  /// TYPE_SKYPE = 0x0D
  /// TYPE_ALARM = 0x0E
  /// TYPE_VKONTAKTE = 0x10
  /// TYPE_LINE = 0x11
  /// TYPE_VIBER = 0x12
  /// TYPE_KAKAO_TALK = 0x13
  /// TYPE_GMAIL = 0x14
  /// TYPE_OUTLOOK = 0x15
  /// TYPE_SNAPCHAT = 0x16
  /// TYPE_TELEGRAM = 0x17
  /// TYPE_CHATWORK = 0x20
  /// TYPE_SLACK = 0x21
  /// TYPE_TUMBLR = 0x23
  /// TYPE_YOUTUBE = 0x24
  /// TYPE_PINTEREST_YAHOO = 0x25
  /// TYPE_TIKTOK = 0x26
  /// TYPE_REDBUS = 0X27
  /// TYPE_DAILYHUNT= 0X28
  /// TYPE_HOTSTAR = 0X29
  /// TYPE_INSHORTS = 0X2A
  /// TYPE_PAYTM = 0X2B
  /// TYPE_AMAZON = 0X2C
  /// TYPE_FLIPKART = 0X2D
  /// TYPE_PRIME = 0X2E
  /// TYPE_NETFLIX = 0X2F
  /// TYPE_GPAY = 0X30
  /// TYPE_PHONPE = 0X31
  /// TYPE_SWIGGY = 0X32
  /// TYPE_ZOMATO = 0X33
  /// TYPE_MAKEMYTRIP = 0X34
  /// TYPE_JIOTV = 0X35
  /// TYPE_KEEP = 0X36
  /// }
  /// @param contactText 通知内容
  /// @param phoneNumber 号码
  /// @return:SUCCESS(0)成功
  int ProtocolV2SetNoticeEvt(
    int type,
    ffi.Pointer<ffi.Char> contactText,
    ffi.Pointer<ffi.Char> phoneNumber,
    ffi.Pointer<ffi.Char> dataText,
  ) {
    return _ProtocolV2SetNoticeEvt(
      type,
      contactText,
      phoneNumber,
      dataText,
    );
  }

  late final _ProtocolV2SetNoticeEvtPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('ProtocolV2SetNoticeEvt');
  late final _ProtocolV2SetNoticeEvt = _ProtocolV2SetNoticeEvtPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  /// @brief v2发送来电提醒状态为来电已接, 告诉设备停止提醒用户(部分设备实现)
  /// @return SUCCESS(0)成功
  int ProtocolV2StopCallEvt() {
    return _ProtocolV2StopCallEvt();
  }

  late final _ProtocolV2StopCallEvtPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('ProtocolV2StopCallEvt');
  late final _ProtocolV2StopCallEvt =
      _ProtocolV2StopCallEvtPtr.asFunction<int Function()>();

  /// @brief v2发送来电提醒状态为来电已拒, 告诉设备停止提醒用户(部分设备实现)
  /// @return SUCCESS(0)成功
  int ProtocolV2MissedCallEvt() {
    return _ProtocolV2MissedCallEvt();
  }

  late final _ProtocolV2MissedCallEvtPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'ProtocolV2MissedCallEvt');
  late final _ProtocolV2MissedCallEvt =
      _ProtocolV2MissedCallEvtPtr.asFunction<int Function()>();

  /// @brief 获取flash日志开始
  /// @param type 日志类型
  /// {PROTOCOL_FLASH_LOG_TYPE_GENERAL   =  0,    //通用log
  /// PROTOCOL_FLASH_LOG_TYPE_RESET             =  1,    //复位log
  /// PROTOCOL_FLASH_LOG_TYPE_ALGORITHM   =   2,    //算法
  /// PROTOCOL_FLASH_LOG_TYPE_HARDWARE    =   3,    //硬件
  /// PROTOCOL_FLASH_LOG_TYPE_REBOOT         =   4,    //重启log}
  /// @param file_name 文件路径 包括文件名及后缀
  /// @return int SUCCESS(0)成功  ERROR_BUSY(17)日志正在获取
  int ProtocolGetFlashLogStart(
    int type,
    ffi.Pointer<ffi.Char> file_name,
  ) {
    return _ProtocolGetFlashLogStart(
      type,
      file_name,
    );
  }

  late final _ProtocolGetFlashLogStartPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'ProtocolGetFlashLogStart');
  late final _ProtocolGetFlashLogStart = _ProtocolGetFlashLogStartPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  /// @brief 设置flash获取时间，单位秒，默认一分钟
  /// @return int SUCCESS(0)成功
  int ProtocolGetFlashLogSetTime(
    int time,
  ) {
    return _ProtocolGetFlashLogSetTime(
      time,
    );
  }

  late final _ProtocolGetFlashLogSetTimePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'ProtocolGetFlashLogSetTime');
  late final _ProtocolGetFlashLogSetTime =
      _ProtocolGetFlashLogSetTimePtr.asFunction<int Function(int)>();

  /// @brief 获取flash日志停止
  /// @return int SUCCESS(0)成功
  int ProtocolGetFlashLogStop() {
    return _ProtocolGetFlashLogStop();
  }

  late final _ProtocolGetFlashLogStopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'ProtocolGetFlashLogStop');
  late final _ProtocolGetFlashLogStop =
      _ProtocolGetFlashLogStopPtr.asFunction<int Function()>();

  /// @brief 获取电池日志信息
  /// @return int SUCCESS(0)成功
  int ProtocolGetBatteryLogInfo() {
    return _ProtocolGetBatteryLogInfo();
  }

  late final _ProtocolGetBatteryLogInfoPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'ProtocolGetBatteryLogInfo');
  late final _ProtocolGetBatteryLogInfo =
      _ProtocolGetBatteryLogInfoPtr.asFunction<int Function()>();

  /// @brief 获取过热日志信息
  /// @return int SUCCESS(0)成功
  int ProtocolGetHeatLogInfo() {
    return _ProtocolGetHeatLogInfo();
  }

  late final _ProtocolGetHeatLogInfoPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('ProtocolGetHeatLogInfo');
  late final _ProtocolGetHeatLogInfo =
      _ProtocolGetHeatLogInfoPtr.asFunction<int Function()>();

  /// @brief:获取flashlog进度回调注册
  /// @param func 函数指针
  /// @return:SUCCESS(0)成功
  int FlashLogTranProgressCallbackReg(
    protocol_report_progress_cb_handle func,
  ) {
    return _FlashLogTranProgressCallbackReg(
      func,
    );
  }

  late final _FlashLogTranProgressCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_report_progress_cb_handle)>>(
      'FlashLogTranProgressCallbackReg');
  late final _FlashLogTranProgressCallbackReg =
      _FlashLogTranProgressCallbackRegPtr.asFunction<
          int Function(protocol_report_progress_cb_handle)>();

  /// @brief 获取flashlog完成回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int FlashLogTranCompletCallbackReg(
    protocol_flash_log_tran_complete_cb_handle func,
  ) {
    return _FlashLogTranCompletCallbackReg(
      func,
    );
  }

  late final _FlashLogTranCompletCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_flash_log_tran_complete_cb_handle)>>(
      'FlashLogTranCompletCallbackReg');
  late final _FlashLogTranCompletCallbackReg =
      _FlashLogTranCompletCallbackRegPtr.asFunction<
          int Function(protocol_flash_log_tran_complete_cb_handle)>();

  /// @brief 获取电池日志完成回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int BatteryLogGetCompletCallbackReg(
    protocol_get_battery_log_info_complete_cb_handle func,
  ) {
    return _BatteryLogGetCompletCallbackReg(
      func,
    );
  }

  late final _BatteryLogGetCompletCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_get_battery_log_info_complete_cb_handle)>>(
      'BatteryLogGetCompletCallbackReg');
  late final _BatteryLogGetCompletCallbackReg =
      _BatteryLogGetCompletCallbackRegPtr.asFunction<
          int Function(protocol_get_battery_log_info_complete_cb_handle)>();

  /// @brief 获取过热日志完成回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int HeatLogGetCompletCallbackReg(
    protocol_get_heat_log_info_complete_cb_handle func,
  ) {
    return _HeatLogGetCompletCallbackReg(
      func,
    );
  }

  late final _HeatLogGetCompletCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_get_heat_log_info_complete_cb_handle)>>(
      'HeatLogGetCompletCallbackReg');
  late final _HeatLogGetCompletCallbackReg =
      _HeatLogGetCompletCallbackRegPtr.asFunction<
          int Function(protocol_get_heat_log_info_complete_cb_handle)>();

  /// 注册函数接口 ********************************/
  /// /**
  /// @brief 解析完固件返回的二进制数据,打包成json数据回调给SDK
  /// @return SUCCESS(0),成功
  int JsonDataCallbackDataReg(
    protocol_json_cb_handle func,
  ) {
    return _JsonDataCallbackDataReg(
      func,
    );
  }

  late final _JsonDataCallbackDataRegPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(protocol_json_cb_handle)>>(
          'JsonDataCallbackDataReg');
  late final _JsonDataCallbackDataReg = _JsonDataCallbackDataRegPtr.asFunction<
      int Function(protocol_json_cb_handle)>();

  /// @brief 解析完固件返回的v3同步健康数据二进制数据,打包成json数据回调给SDK
  /// @return SUCCESS(0),成功
  int V3SyncHealthJsonDataCbReg(
    protocol_json_cb_handle func,
  ) {
    return _V3SyncHealthJsonDataCbReg(
      func,
    );
  }

  late final _V3SyncHealthJsonDataCbRegPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(protocol_json_cb_handle)>>(
          'V3SyncHealthJsonDataCbReg');
  late final _V3SyncHealthJsonDataCbReg = _V3SyncHealthJsonDataCbRegPtr
      .asFunction<int Function(protocol_json_cb_handle)>();

  /// @brief c库通知app事件回调注册
  /// @return SUCCESS(0),成功
  int ProtocolNoticeCallbackReg(
    protocol_notice_cb_handle func,
  ) {
    return _ProtocolNoticeCallbackReg(
      func,
    );
  }

  late final _ProtocolNoticeCallbackRegPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(protocol_notice_cb_handle)>>(
          'ProtocolNoticeCallbackReg');
  late final _ProtocolNoticeCallbackReg = _ProtocolNoticeCallbackRegPtr
      .asFunction<int Function(protocol_notice_cb_handle)>();

  /// @brief 文件传输完成事件回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int DataTranCompleteCallbackReg(
    data_tran_complete_cb_handle func,
  ) {
    return _DataTranCompleteCallbackReg(
      func,
    );
  }

  late final _DataTranCompleteCallbackRegPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(data_tran_complete_cb_handle)>>(
      'DataTranCompleteCallbackReg');
  late final _DataTranCompleteCallbackReg = _DataTranCompleteCallbackRegPtr
      .asFunction<int Function(data_tran_complete_cb_handle)>();

  /// @brief 文件传输进度事件回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int DataTranProgressCallbackReg(
    data_tran_progress_cb_handle func,
  ) {
    return _DataTranProgressCallbackReg(
      func,
    );
  }

  late final _DataTranProgressCallbackRegPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(data_tran_progress_cb_handle)>>(
      'DataTranProgressCallbackReg');
  late final _DataTranProgressCallbackReg = _DataTranProgressCallbackRegPtr
      .asFunction<int Function(data_tran_progress_cb_handle)>();

  /// @brief:SPP文件传输完成事件回调注册
  /// @param func 函数指针
  /// @return:SUCCESS(0)成功
  int SppDataTranCompleteCallbackReg(
    data_tran_complete_cb_handle func,
  ) {
    return _SppDataTranCompleteCallbackReg(
      func,
    );
  }

  late final _SppDataTranCompleteCallbackRegPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(data_tran_complete_cb_handle)>>(
      'SppDataTranCompleteCallbackReg');
  late final _SppDataTranCompleteCallbackReg =
      _SppDataTranCompleteCallbackRegPtr.asFunction<
          int Function(data_tran_complete_cb_handle)>();

  /// @brief:SPP文件传输进度事件回调注册
  /// @param func 函数指针
  /// @return:SUCCESS(0)成功
  int SppDataTranProgressCallbackReg(
    data_tran_progress_cb_handle func,
  ) {
    return _SppDataTranProgressCallbackReg(
      func,
    );
  }

  late final _SppDataTranProgressCallbackRegPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(data_tran_progress_cb_handle)>>(
      'SppDataTranProgressCallbackReg');
  late final _SppDataTranProgressCallbackReg =
      _SppDataTranProgressCallbackRegPtr.asFunction<
          int Function(data_tran_progress_cb_handle)>();

  /// @brief:设备传输文件到APP的传输完成事件回调注册
  /// @param func 函数指针
  /// @return:SUCCESS(0)成功
  int Device2AppDataTranCompleteCallbackReg(
    protocol_report_complete_cb_handle func,
  ) {
    return _Device2AppDataTranCompleteCallbackReg(
      func,
    );
  }
